[tool.poetry]
name = "python-for-data-analysis"
version = "0.1.0"
description = ""
authors = ["Christian Schleifer <chr.schleifer@gmail.com>"]
readme = "README.md"
packages = [{include = "python_for_data_analysis"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
jupyterlab = "^4.0.5"
jupyterlab-vim = "^4.0.2"
numpy = "^1.25.2"
pandas = "^2.0.3"
matplotlib = "^3.7.2"
lxml = "^4.9.3"
seaborn = "^0.12.2"
statsmodels = "^0.14.0"
scipy = "^1.11.2"
patsy = "^0.5.3"
scikit-learn = "^1.3.0"
beautifulsoup4 = "^4.12.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
